# lcls2

./: .clang-format  .daq_20241215.txt  .daq_20250402.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  .ps-4.6.3-daq.txt  .setup_env_newtest.sh.swp  .tmp_smd_producer.py  .travis.yml  CHANGES.md  CHECKPOINT.md  CLAUDE.md  CMakeLists.txt  README.md  README.txt  TESTING.md  WHEEL_BUILD_SUMMARY.md  build_all.sh  build_all_spack.sh  build_all_spack_copy.sh  build_lcls2.sh  build_psana.sh  build_python2_psana.sh  build_python3_light.sh  build_travis.sh  build_wheel.sh  clean_lcls2.sh  dSourceTest.py  helloWorld  hsdconfig.py  install_travis.sh  mac-requirements.txt  meson.build  meson_options.txt  ps-4.6.3.txt  pyproject.toml  run_travis.sh  set_pyenv  setup_env.sh  (+12 more)
drp/: AreaDetector.cc  CMakeLists.txt  Digitizer.cc  Digitizer.hh  EventBuilder.cc  EventBuilder.hh  PgpCardG3Status.h  PgpIoctl.h  README  drp.hh  fex.cc  fex.hh  main.cc  main.cpp  main.hh  mpscqueue.cc  mpscqueue.cpp  mpscqueue.hh  pgp-sender.cc  pgp-sender.cpp  spscqueue.cc  spscqueue.cpp  spscqueue.hh  test-mpscqueue.cc  test-mpscqueue.cpp  test.cc  test.cpp
pds/: CMakeLists.txt
pds/app/: h5writer.cc
pds/hdf5/: Hdf5Writer.hh
pdsdata/: CMakeLists.txt
pdsdata/app/: dataSource.cc  descriptor-test.cc  dgram.cc  getItemTest.cc  h5writer.cc  pydgconvert.cc  testProg.cc  xtcreader.cc  xtcwriter.cc
pdsdata/xtc/: BldInfo.hh  ClockTime.hh  Damage.hh  Descriptor.hh  DetInfo.hh  Dgram.hh  Env.hh  Hdf5Writer.hh  L1AcceptEnv.hh  Level.hh  ProcInfo.hh  Sequence.hh  Src.hh  TimeStamp.hh  TransitionId.hh  TypeId.hh  Xtc.hh  XtcFileIterator.hh  XtcIterator.hh
psalg/: .gitattributes  CMakeLists.txt  MANIFEST.in  meson.build  peak.cpp  peakFinder.pyx  peakHeap.cpp  setup.cfg  setup.py  test.py
psalg/cmake/: Findroentdek.cmake  alloc_headersConfig.cmake.in
psalg/psalg/: AllocArray.hh  ArrayIO.hh  CMakeLists.txt  PeakFinderAlgos.hh  XTC_LINK.cc  _version.py  hsd.hh  meson.build
psalg/psalgos/: README.md
psana/: .gitattributes  .gitignore  CMakeLists.txt  DataSource.py  Event.py  MANIFEST.in  PyDgram.py  __init__.py  buildTestData.sh  dgram.cc  event.py  meson.build  pydgram.py  pyproject.toml  setup.cfg  setup.py  setup.py.old  test.py  testDgram.py  testh5.py  testvals.py  testxtc.py
psana/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
psana/Detector/: Detector.py  testOpaque.py
psana/amii/: LICENSE.md  README.md  setup.py
psana/cmake/: peaksConfig.cmake.in
psana/psana/: CMakeLists.txt  PSALG_LINK.cc  XTC_LINK.cc  __init__.py  _version.py  bufferedreader.pyx  cydebug.pxh  datasource.py  detector.py  dgramedit.pxd  dgramedit.pyx  dgramlite.pxd  dgramlite.pyx  dgrammanager.py  dgrampy.pxd  dgrampy.pyx  event.py  eventbuilder.pyx  marchingeventbuilder.pyx  mman_compat.pxd  mypybuffer.pyx  opaque.py  parallelreader.pxd  parallelreader.pyx  pydgram.py  quadanode.pyx  smalldata.py  smdreader.pxd  smdreader.pyx  utils.py  xtcupdateiter.pxd  xtcupdateiter.pyx
psana/pscalib/: README.md
psana/pyalgos/: README-STATUS  __init__.py
psana/src/: bufferedreader.pyx  container.cc  dgram.cc  dgramchunk.pyx  legion_helper.cc  legion_helper.h  legion_helper.hh  legion_helper.inl  seq.cc
psana/test/: parallel.py  testdet.py  testvals.py  testxtc.py
psdaq/: .gitattributes  CMakeLists.txt  MANIFEST.in  meson.build  pyproject.toml  setup.cfg  setup.py  setup.py.old
psdaq/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
psdaq/app/: AppUtils.cc  CMakeLists.txt  h5writer.cc  tprca.cc
psdaq/bld/: BldHeader.hh  BldServer.cc  BldServer.hh  CMakeLists.txt  Client.cc  HpsEvent.hh  HpsEventIterator.hh  MyType.hh  hpsBldServer.cc  templates.cc
psdaq/cmake/: Findcpsw.cmake  Findepics.cmake  Findlibfabric.cmake  Findusdusb4.cmake
psdaq/cphw/: AmcPLL.hh  AmcTiming.cc  AmcTiming.hh  AxiVersion.cc  AxiVersion.hh  BldControl.cc  CMakeLists.txt  GthEyeScan.cc  GthEyeScan.hh  HsRepeater.cc  HsRepeater.hh  Reg64.hh  Reg_rssi.cc  RingBuffer.cc  RingBuffer.hh  XBar.cc  amc_eyescan.cc
psdaq/drp/: .#BldDetector.hh  .#CubeTebReceiver.cc  .#OpalTTFex.hh  AreaDetector.cc  AreaDetector.hh  AreaDetectorGpu.cc  AreaDetectorGpu.cu  AreaDetectorGpu.hh  AxiBatcherParser.cc  AxiBatcherParser.hh  AxiBatcherParserTest.cc  AxiStreamBatcherHeader.hh  AxiStreamBatcherParser.cc  BEBDetector.cc  BEBDetector.hh  BldDetector.cc  BldDetector.hh  BldDetectorP.cc  BldDetectorSlow.cc  BldNames.cc  BldNames.hh  BufferedDataCallbackHandler.cc  BufferedDataCallbackHandler.hh  CMakeLists.txt  Collector.cc  Collector.hh  CubeData.cc  CubeData.hh  CubeResult.cc  CubeResult.hh  CubeTebReceiver.cc  CubeTebReceiver.hh  Detector.hh  Detectors.hh  Digitizer.cc  Digitizer.hh  DigitizerNew.cc  DigitizerNew.hh  DrpApp.cc  DrpApp.hh  (+143 more)
psdaq/drpGpu/: AreaDetector.cu  AreaDetector.hh  CMakeLists.txt  Collector.cu  Collector.hh  CuSZpReducer.cu  CuSZpReducer.hh  CuSzReducer.cu  CuSzReducer.hh  Detector.cc  Detector.hh  EipReducer.cu  EipReducer.hh  EpixUHRemu.cu  EpixUHRemu.hh  EpixUHRsim.cu  EpixUHRsim.hh  FileWriter.cc  FileWriter.hh  GpuAsyncLib.cc  GpuAsyncLib.hh  GpuAsyncOffsets.h  LcReducer.cu  LcReducer.hh  MemPool.cc  MemPool.cu  MemPool.hh  NoOpReducer.cu  NoOpReducer.hh  PGPDetector.cc  PGPDetector.cu  PGPDetector.hh  PGPDetectorApp.cc  PGPDetectorApp.hh  PfplReducer.cu  PfplReducer.hh  Reader.cu  Reader.hh  Reducer.cu  Reducer.hh  (+29 more)
psdaq/drp_olddriver/: AreaDetector.hh  CMakeLists.txt  Detectors.hh  Digitizer.cc  Digitizer.hh  EventBuilder.hh  main.cc  mpscqueue.hh  test-mpscqueue.cc  test.cc
psdaq/dti/: CMakeLists.txt  Module.cc  Module.hh  PVCtrls.cc  PVCtrls.hh  PVStats.cc  dtiPVs.cc  dti_eyescan.cc  dti_simple.cc
psdaq/eb/: Batch.cc  Batch.hh  BatchHandler.cc  BatchHandler.hh  BatchManager.cc  BatchManager.hh  CMakeLists.txt  EbContribution.hh  EbEpoch.cc  EbEpoch.hh  EbEvent.cc  EbEvent.hh  EbFtBase.cc  (+28 more)
xtc_vol/: CMakeLists.txt  README  README.md  testcase_xtc_vol.c  tree_test.cc  xtc_clib_test.c  xtc_io_api.cc  xtc_io_api_c.h  xtc_io_api_cpp.hh  xtc_io_test.cc  xtc_tree.cc  xtc_tree.hh  xtc_vol.c  xtc_vol.h
xtcdata/: CMakeLists.txt  meson.build
(+4718 files in other folders)
