[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psalg"
version="4.3"
requires-python = ">=3.8"

[project.scripts]
syslog = "psalg.utils.syslog:main"
daqPipes = "psalg.daqPipes.daqPipes:main"
daqStats = "psalg.daqPipes.daqStats:main"

[tool.cython-lint]
max-line-length = 160
ignore = ['E221', 'E222', 'E266']

[tool.ruff]
line-length = 160

[tool.setuptools.packages.find]
where = ["psalg"]
include = ["psalg", "psalg.daqPipes*", "psalg.utils*"]
