[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcls"
version="4.3"
requires-python = ">=3.8"

[project.scripts]
#procmgr = "psdaq.procmgr.procmgr"
#procstat = "psdaq.procmgr.procstat"
#condaProcServ = "psdaq.procmgr.condaProcServ"
syslog = "psalg.utils.syslog:main"
daqPipes = "psalg.daqPipes.daqPipes:main"
daqStats = "psalg.daqPipes.daqStats:main"
convert_npy_to_txt  = "psana.pyalgos.app.convert_npy_to_txt:do_main"
convert_txt_to_npy  = "psana.pyalgos.app.convert_txt_to_npy:do_main"
merge_mask_ndarrays = "psana.pyalgos.app.merge_mask_ndarrays:do_main"
merge_max_ndarrays  = "psana.pyalgos.app.merge_max_ndarrays:do_main"
cdb = "psana.pscalib.app.cdb:cdb_cli"
cdb2 = "psana.pscalib.app.cdb2:cdb_cli"
proc_info = "psana.pscalib.app.proc_info:do_main"
proc_control = "psana.pscalib.app.proc_control:do_main"
proc_new_datasets   = "psana.pscalib.app.proc_new_datasets:do_main"
timeconverter = "psana.graphqt.app.timeconverter:timeconverter"
calibman = "psana.graphqt.app.calibman:calibman_gui"
hdf5explorer = "psana.graphqt.app.hdf5explorer:hdf5explorer_gui"
screengrabber = "psana.graphqt.ScreenGrabberQt5:run_GUIScreenGrabber"
detnames = "psana.app.detnames:detnames"
config_dump = "psana.app.config_dump:config_dump"
xtcavDark = "psana.xtcav.app.xtcavDark:__main__"
xtcavLasingOff = "psana.xtcav.app.xtcavLasingOff:__main__"
xtcavLasingOn = "psana.xtcav.app.xtcavLasingOn:__main__"
xtcavDisplay = "psana.xtcav.app.xtcavDisplay:__main__"
shmemClientSimple = "psana.app.shmemClientSimple:main"
epix10ka_pedestals_calibration = "psana.app.epix10ka_pedestals_calibration:do_main"
epix10ka_charge_injection = "psana.app.epix10ka_charge_injection:do_main"
epix10ka_deploy_constants = "psana.app.epix10ka_deploy_constants:do_main"
epix10ka_raw_calib_image  = "psana.app.epix10ka_raw_calib_image:do_main"
epix10ka_calib_components = "psana.app.epix10ka_calib_components:__main__"
epixm320_charge_injection = "psana.app.epixm320_charge_injection:do_main"
epixm320_dark_proc = "psana.app.epixm320_dark_proc:do_main"
epixm320_deploy_constants = "psana.app.epixm320_deploy_constants:do_main"
epix_dark_proc = "psana.app.epix_dark_proc:do_main"
datinfo = "psana.app.datinfo:do_main"
det_dark_proc = "psana.app.det_dark_proc:do_main"
det_pixel_status = "psana.app.det_pixel_status:do_main"
parallel_proc = "psana.app.parallel_proc:do_main"
iv = "psana.graphqt.app.iv:image_viewer"
masked = "psana.graphqt.app.masked:mask_editor"
roicon = "psana.app.roicon:__main__"
psplot_live = "psana.app.psplot_live.main:start"
timestamp_sort_h5 = "psana.app.timestamp_sort_h5.main:start"
psanaplot = "psana.app.psana_plot:_do_main"
jungfrau_dark_proc  = "psana.app.jungfrau_dark_proc:do_main"
jungfrau_deploy_constants = "psana.app.jungfrau_deploy_constants:do_main"
caliblogs = "psana.app.caliblogs:do_main"
calibrepo = "psana.app.calibrepo:do_main"
calibvalidity = "psana.app.calibvalidity:do_main"
geometry_convert = "psana.app.geometry_convert:do_main"
geometry_image = "psana.app.geometry_image:do_main"
calib_prefetch = "psana.pscalib.app.calib_prefetch.__main__:main"
optical_metrology_check = "psana.pscalib.app.optical_metrology_check:do_main"
optical_metrology_epix10ka2m = "psana.pscalib.app.optical_metrology_epix10ka2m:do_main"
make_or_print_npyarray = "psana.app.make_or_print_numpy_array:do_main"
det_calib_ave_and_max = "psana.app.det_calib_ave_and_max:__main__"
control = "psdaq.control.control:main"
selectPlatform = "psdaq.control.selectPlatform:main"
showPlatform = "psdaq.control.showPlatform:main"
daqstate = "psdaq.control.daqstate:main"
currentexp = "psdaq.control.currentexp:main"
testClient2 = "psdaq.control.testClient2:main"
testAsyncErr = "psdaq.control.testAsyncErr:main"
testFileReport = "psdaq.control.testFileReport:main"
configdb = "psdaq.configdb.configdb:main"
configdb_GUI = "psdaq.configdb.configdb_GUI:main"
configdb_multimod = "psdaq.configdb.configdb_multimod:configdb_multimod"
epixquad_store_gainmap = "psdaq.configdb.epixquad_store_gainmap:main"
epixquad_create_pixelmask = "psdaq.configdb.epixquad_create_pixelmask:main"
epixhr_config_from_yaml_set = "psdaq.configdb.epixhr_config_from_yaml_set:main"
epixhr_pedestal_scan = "psdaq.cas.epixhr_pedestal_scan:main"
epixhr_chargeinj_scan = "psdaq.cas.epixhr_chargeinj_scan:main"
epixhr_timing_scan = "psdaq.cas.epixhr_timing_scan:main"
epixhr_config_scan = "psdaq.cas.epixhr_config_scan:main"
epixhr_r0acq_scan = "psdaq.cas.epixhr_r0acq_scan:main"
epixquad_chargeinj_scan = "psdaq.cas.epixquad_chargeinj_scan:main"
epixquad_pedestal_scan = "psdaq.cas.epixquad_pedestal_scan:main"
epixuhr_chargeinj_scan = "psdaq.cas.epixuhr_chargeinj_scan:main"
epixuhr_pedestal_scan = "psdaq.cas.epixuhr_pedestal_scan:main"
seq_epixhr = "psdaq.seq.seq_epixhr:main"
generic_timing_scan = "psdaq.cas.generic_timing_scan:main"
getrun = "psdaq.control.getrun:main"
groupca = "psdaq.cas.groupca:main"
xpmpva = "psdaq.cas.xpmpva:main"
xpmpatt = "psdaq.cas.xpmpatt:main"
hsdca = "psdaq.cas.hsdca:main"
hsdcas = "psdaq.cas.hsdcas:main"
hsdpva = "psdaq.cas.hsdpva:main"
hsdpvs = "psdaq.cas.hsdpvs:main"
pvatable = "psdaq.cas.pvatable:main"
pvant = "psdaq.cas.pvant:main"
campvs = "psdaq.cas.campvs:main"
tprca = "psdaq.cas.tprca:main"
tprcas = "psdaq.cas.tprcas:main"
xpmioc = "psdaq.cas.xpmioc:main"
bldcas = "psdaq.cas.bldcas:main"
bldgmd = "psdaq.cas.bldgmd:main"
hpsdbuscas = "psdaq.cas.hpsdbuscas:main"
wave8pvs = "psdaq.cas.wave8pvs:main"
setup_tdrp = "psdaq.cas.setup_tdrp:main"
pytdrp = "psdaq.cas.pytdrp:main"
pytdet_collector = "psdaq.cas.pytdet_collector:main"
pyxpm = "psdaq.pyxpm.pyxpm:main"
pykcuxpm = "psdaq.pyxpm.pykcuxpm:main"
amccpromload = "psdaq.pyxpm.amccpromload:main"
pykcu = "psdaq.pykcu.pykcu:main"
control_gui = "psdaq.control_gui.app.control_gui:control_gui"
bluesky_simple = "psdaq.control.bluesky_simple:main"
opal_config_scan = "psdaq.control.opal_config_scan:main"
ts_config_scan = "psdaq.control.ts_config_scan:main"
timed_run = "psdaq.control.timed_run:main"
epics_exporter = "psdaq.cas.epics_exporter:main"
hsd_epics_exporter = "psdaq.cas.hsd_epics_exporter:main"
hsd_input_select = "psdaq.cas.hsd_input_select:main"
fixed_rate_table = "psdaq.seq.fixed_rate_table:main"
periodicgenerator = "psdaq.seq.periodicgenerator:main"
rixgenerator = "psdaq.seq.rixgeneratory:main"
seqplot = "psdaq.seq.seqplot:main"
seqprogram = "psdaq.seq.seqprogram:main"
traingenerator = "psdaq.seq.traingenerator:main"
ued_seq_setup = "psdaq.seq.ued_seq_setup:main"
bos = "psdaq.bos.bos:main"
prometheus2pvs = "psdaq.cas.prometheus2pvs:main"
prometheusIOC = "psdaq.cas.prometheusIOC:main"
daqmgr = "psdaq.slurm.main:_do_main"
cnf2py = "psdaq.slurm.cnftopy:_do_main"
daqstat = "psdaq.slurm.daqstat:_do_main"
daqlog_header = "psdaq.slurm.daqlog_header:_do_main"
jungfrau_pedestal_scan = "psdaq.cas.jungfrau_pedestal_scan:main"
jungfrau_gain_mode = "psdaq.configdb.jungfrau_gain_mode:change_gain_mode"
jungfrau_protection = "psdaq.configdb.jungfrau_protection:change_protection_settings"
detector_protection_monitor = "psdaq.trigger.detector_protection_monitor:main"

[tool.cython-lint]
max-line-length = 160
ignore = ['E221', 'E222', 'E266']

[tool.ruff]
line-length = 160

[tool.setuptools.packages.find]
where = ["psalg", "psana"]
include = ["psalg", "psalg.daqPipes*", "psalg.utils*", "psana", "psana.debugtools*", "psana.pscalib*", "psana.gtaphqt*", "psana.peakFinder*", "psana.momentum*", "psana.app*", "psana.hexanode*", "psana.psexp*", "psana.xtcav*", "psana.dgramPort*", "psana.pyalgos", "psana.detector*", "psana.pop*"] 
