[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcls"
version="4.3"
requires-python = ">=3.8"

[project.scripts]
#procmgr = "psdaq.procmgr.procmgr"
#procstat = "psdaq.procmgr.procstat"
#condaProcServ = "psdaq.procmgr.condaProcServ"
syslog = "psalg.utils.syslog:main"
daqPipes = "psalg.daqPipes.daqPipes:main"
daqStats = "psalg.daqPipes.daqStats:main"
convert_npy_to_txt  = "psana.pyalgos.app.convert_npy_to_txt:do_main"
convert_txt_to_npy  = "psana.pyalgos.app.convert_txt_to_npy:do_main"
merge_mask_ndarrays = "psana.pyalgos.app.merge_mask_ndarrays:do_main"
merge_max_ndarrays  = "psana.pyalgos.app.merge_max_ndarrays:do_main"
cdb = "psana.pscalib.app.cdb:cdb_cli"
cdb2 = "psana.pscalib.app.cdb2:cdb_cli"
proc_info = "psana.pscalib.app.proc_info:do_main"
proc_control = "psana.pscalib.app.proc_control:do_main"
proc_new_datasets   = "psana.pscalib.app.proc_new_datasets:do_main"
timeconverter = "psana.graphqt.app.timeconverter:timeconverter"
calibman = "psana.graphqt.app.calibman:calibman_gui"
hdf5explorer = "psana.graphqt.app.hdf5explorer:hdf5explorer_gui"
screengrabber = "psana.graphqt.ScreenGrabberQt5:run_GUIScreenGrabber"
detnames = "psana.app.detnames:detnames"
config_dump = "psana.app.config_dump:config_dump"
xtcavDark = "psana.xtcav.app.xtcavDark:__main__"
xtcavLasingOff = "psana.xtcav.app.xtcavLasingOff:__main__"
xtcavLasingOn = "psana.xtcav.app.xtcavLasingOn:__main__"
xtcavDisplay = "psana.xtcav.app.xtcavDisplay:__main__"
shmemClientSimple = "psana.app.shmemClientSimple:main"
epix10ka_pedestals_calibration = "psana.app.epix10ka_pedestals_calibration:do_main"
epix10ka_charge_injection = "psana.app.epix10ka_charge_injection:do_main"
epix10ka_deploy_constants = "psana.app.epix10ka_deploy_constants:do_main"
epix10ka_raw_calib_image  = "psana.app.epix10ka_raw_calib_image:do_main"
epix10ka_calib_components = "psana.app.epix10ka_calib_components:__main__"
epixm320_charge_injection = "psana.app.epixm320_charge_injection:do_main"
epixm320_dark_proc = "psana.app.epixm320_dark_proc:do_main"
epixm320_deploy_constants = "psana.app.epixm320_deploy_constants:do_main"
epix_dark_proc = "psana.app.epix_dark_proc:do_main"
datinfo = "psana.app.datinfo:do_main"
det_dark_proc = "psana.app.det_dark_proc:do_main"
det_pixel_status = "psana.app.det_pixel_status:do_main"
parallel_proc = "psana.app.parallel_proc:do_main"
iv = "psana.graphqt.app.iv:image_viewer"
masked = "psana.graphqt.app.masked:mask_editor"
roicon = "psana.app.roicon:__main__"
psplot_live = "psana.app.psplot_live.main:start"
timestamp_sort_h5 = "psana.app.timestamp_sort_h5.main:start"
psanaplot = "psana.app.psana_plot:_do_main"
jungfrau_dark_proc  = "psana.app.jungfrau_dark_proc:do_main"
jungfrau_deploy_constants = "psana.app.jungfrau_deploy_constants:do_main"
caliblogs = "psana.app.caliblogs:do_main"
calibrepo = "psana.app.calibrepo:do_main"
calibvalidity = "psana.app.calibvalidity:do_main"
geometry_convert = "psana.app.geometry_convert:do_main"
geometry_image = "psana.app.geometry_image:do_main"
calib_prefetch = "psana.pscalib.app.calib_prefetch.__main__:main"
optical_metrology_check = "psana.pscalib.app.optical_metrology_check:do_main"
optical_metrology_epix10ka2m = "psana.pscalib.app.optical_metrology_epix10ka2m:do_main"
make_or_print_npyarray = "psana.app.make_or_print_numpy_array:do_main"
det_calib_ave_and_max = "psana.app.det_calib_ave_and_max:__main__"

[tool.cython-lint]
max-line-length = 160
ignore = ['E221', 'E222', 'E266']

[tool.ruff]
line-length = 160

[tool.setuptools.packages.find]
where = ["psalg", "psana"]
include = ["psalg", "psalg.daqPipes*", "psalg.utils*", "psana", "psana.debugtools*", "psana.pscalib*", "psana.gtaphqt*", "psana.peakFinder*", "psana.momentum*", "psana.app*", "psana.hexanode*", "psana.psexp*", "psana.xtcav*", "psana.dgramPort*", "psana.pyalgos", "psana.detector*", "psana.pop*"] 
